[Twinkle/Pulkit] Add agenda times and update title

--- a/mar2022.html
+++ b/mar2022.html
@@ -137,7 +137,7 @@
             <div class="large-4 columns time" id="agenda-1"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>2:00PM - 2:10PM</p>
+                <p>14:00 - 14:10</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-1"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
@@ -150,59 +150,61 @@
             <div class="large-4 columns time" id="agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>2:20PM - 3:30PM</p>
+                <p>14:20 - 15:30</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>XaaS : Looking back to look forward<br></p>
+                <p>XaaS : Looking back to look forward<br> Panelists - Muralidharan. N, Madhavi Das,
+                    Rohit Karlo, Namitha Anand <br>
+                    Moderator - Vinodh Shankarnarayan </p>
             </div>
         </div>
         <div class="row">
             <div class="large-4 columns time" id="agenda-4"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>3:35PM - 4:20PM</p>
+                <p>15:35 - 16:20</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-4"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Metaverse as a service</p>
+                <p>Metaverse as a service <br> Vinodh Arumugam </p>
             </div>
         </div>
         <div class="row">
             <div class="large-4 columns time" id="agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>4:20PM - 4:35PM</p>
+                <p>16:20 - 16:35</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Insurance as a service</p>
+                <p>Insurance as a service <br> Ritesh Raj </p>
             </div>
         </div>
         <div class="row">
             <div class="large-4 columns time" id="agenda-7"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>4:40PM - 5:25PM</p>
+                <p>16:40 - 17:25    </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-7"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Symposium</p>
+                <p>Symposium <br> Hari Krishnasubramani </p>
             </div>
         </div><div class="row">
             <div class="large-4 columns time" id="agenda-8"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>5:25PM - 5:40PM</p>
+                <p>17:25 - 17:40</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-8"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>XaaS as an X</p>
+                <p>XaaS as an X <br> Rithwik Krishnakumar </p>
             </div>
         </div>
         <div class="row">
@@ -217,12 +219,12 @@
             <div class="large-4 columns time" id="agenda-11"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>10:15AM - 11:00AM</p>
+                <p>10:15 - 11:00</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-11"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Keynote</p>
+                <p>Keynote <br> Bharat Kris </p>
             </div>
         </div>
 
@@ -230,12 +232,12 @@
             <div class="large-4 columns time" id="agenda-12"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>11:00AM - 11:15AM</p>
+                <p>11:00 - 11:15</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-12"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Logistics as a Service: Trends and opportunities</p>
+                <p>Logistics as a Service: Trends and opportunities <br> Atul Chopra </p>
             </div>
         </div>
 
@@ -243,12 +245,12 @@
             <div class="large-4 columns time" id="agenda-14"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>11:30AM - 12:15PM</p>
+                <p>11:30 - 12:15</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-14"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Banking backend as a Service</p>
+                <p>AI as a Service: The Next thing for Big Tech <br> Adyot Kumar Srivastava </p>
             </div>
         </div>
 
@@ -256,12 +258,12 @@
             <div class="large-4 columns time" id="agenda-15"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>12:15PM - 12:30PM</p>
+                <p>12:15 - 12:30</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-15"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Retail Stores as a Service (RSaaS)</p>
+                <p>Retail Stores as a Service (RSaaS) <br> Bala Venkat </p>
             </div>
         </div>
 
@@ -269,12 +271,12 @@
             <div class="large-4 columns time" id="agenda-17"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>12:40PM - 1:25PM</p>
+                <p>12:30 - 13:15</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-17"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Symposium</p>
+                <p>Symposium <br> Bhanu Singh </p>
             </div>
         </div>
 
@@ -282,24 +284,24 @@
             <div class="large-4 columns time" id="agenda-18"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>1:25PM - 1:40PM</p>
+                <p>13:25 - 13:40</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-18"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Learning as a Service (LaaS)</p>
+                <p>Learning as a Service (LaaS) <br> Geeta Bose </p>
             </div>
         </div>
         <div class="row">
             <div class="large-4 columns time" id="agenda-20"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>2:15PM - 3:00PM</p>
+                <p>13:40 - 14:25</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-20"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>AI as a Service: The Next thing for Big Tech</p>
+                <p>Banking backend as a Service <br> Gopal Upadhyaya </p>
             </div>
         </div>
 
@@ -307,12 +309,12 @@
             <div class="large-4 columns time" id="agenda-21"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>3:00PM - 3:15PM</p>
+                <p>14:25 - 15:25</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-21"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Neural Network as a service</p>
+                <p>Neural Network as a service <br> Dhivya Raj </p>
             </div>
         </div>
     </div>
