[Rikkashini/Twinkle]Updated font family and color to be consistent for 2022 edition page

--- a/mar2022.html
+++ b/mar2022.html
@@ -25,7 +25,6 @@
     <!--[if IE 7]>
     <link rel="stylesheet" href="css/icons/fontello-ie7.css"/>
     <![endif] -->
-
     <script src="js/custom.modernizr.js"></script>
 </head>
 <body>
@@ -42,7 +41,7 @@
                 <img src="./img/tw-logo-2022.png" alt="Thoughtworks" align="center"/>
             </a>
             <h1>Converge 2022, Bengaluru</h1>
-            <p style="opacity:0.8;font-size:0.90em">Converge aims to bring together ideators, designers, analysts,
+            <p>Converge aims to bring together ideators, designers, analysts,
                 solution providers, and technologists to connect, collaborate and learn from each other.</p>
         </div>
     </div>
