--- a/mar2022.html
+++ b/mar2022.html
@@ -319,56 +319,131 @@
     </div>
 </section>
 
-<section id="speaker_list" class="speakerList" style="min-height: 50%; text-align: center">
-    <h5 style="padding: 10%; color: #47A1AD">Speaker details will be added soon!</h5>
-</section>
+<!--<section id="speaker_list" class="speakerList" style="min-height: 50%; text-align: center">-->
+<!--    <h5 style="padding: 10%; color: #47A1AD">Speaker details will be added soon!</h5>-->
+<!--</section>-->
 
-<!--<section id="speaker_list" class="speakerList" >
-    <div class="header">
-        <h2>Speakers</h2>
-    </div>
-    <h5>Coming soon</h5>
-     <div class="speakers-list-item speakers-list-item-initial">
-        <img src="./img/2020/kiran.jpg" />
-         <div class="speakers-list-description">
-            <h6>Kiran Anandampillai</h6>
-            <p>Advisor Technology NDHM</p>
+<!--<section id="speaker_list" class="speakerList" >-->
+
+
+
+<section id="speaker_list" class="speakerList" >
+        <div class="header">
+            <h2>Speakers</h2>
         </div>
-    </div>
-       <div class="speakers-list-item"><img src="./img/2020/kavitha.jpg" />
-           <div class="speakers-list-description">
-               <h6>Kavitha Thyagarajan</h6>
-               <p>Design lead - Digital Platform</p>
-                <p>Thoughtworks</p>
+<!--        <div class="speakers-list-item speakers-list-item-initial">-->
+<!--            <img src="./img/2022/adyotKumarSrivastava.jpg" />-->
+<!--            <div class="speakers-list-description">-->
+<!--                <h6>Adyot Kumar Srivastava.</h6>-->
+<!--                <p>Holder</p>-->
+<!--            </div>-->
+<!--        </div>-->
 
-           </div>
-       </div>
-   </div>-->
-</section>
-
-<!--<section id="speaker_list" class="speakerList" >
-    <div class="header">
-        <h2>Speakers</h2>
-    </div>
-    <h5>Coming soon</h5>
-     <div class="speakers-list-item speakers-list-item-initial">
-        <img src="./img/2020/kiran.jpg" />
-         <div class="speakers-list-description">
-            <h6>Kiran Anandampillai</h6>
-            <p>Advisor Technology NDHM</p>
+        <div class="speakers-list">
+            <div class="speakers-list-item">
+                <img src="./img/2022/adyotKumarSrivastava.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Adyot Kumar Srivastava.</h6>
+                    <p>Business Analyst, CoffeeBeans Consulting</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/atulChopra.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Atul Chopra</h6>
+                    <p>Product Manager - Retail Practice</p>
+                    <p>Thoughtworks</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/balakrishna.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Balakrishna Parankusam Venkata</h6>
+                    <p>Retail Domain Specialist</p>
+                    <p>Thoughtworks</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/bhanuSingh.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Bhanu Singh</h6>
+                    <p>Senior Director, XaaS Monetization platform</p>
+                    <p>Dell Tech</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/bharatKrishnamurthy.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Bharat Krishnamurthy</h6>
+                    <p>Vice President</p>
+                    <p>Paytm</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/dhivyaRaj.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Dhivya Raj</h6>
+                    <p>Tech Project Manager, CoffeeBeans Consulting</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/geetaBose.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Geeta Bose</h6>
+                    <p>Advisory, Digital Transformation and Operation</p>
+                    <p>Thoughtworks</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/gopalkrishnanUpadhyaya.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Gopalakrishnan Upadhyaya</h6>
+                    <p>Product Manager - Financial Services</p>
+                    <p>Thoughtworks</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/hari.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Hari Krishnasubramani</h6>
+                    <p>Managing Director, Consulting Solutions, PwC</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/madhaviDas.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Madhavi Das</h6>
+                    <p>Client Principal</p>
+                    <p>Thoughtworks</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/murali.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Muralidharan Neelameghan</h6>
+                    <p>Digital Strategist, Hyper Intelligent Automation</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/ritesh.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Ritesh Raj</h6>
+                    <p>Product Manager, Financial Services</p>
+                    <p>Thoughtworks</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/rithwik.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Rithwik Krishnakumar</h6>
+                    <p>Data Scientist</p>
+                    <p>Thoughtworks</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/rohitKalro.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Rohit Kalro</h6>
+                    <p>Head, Digital Transformation & Strategy</p>
+                    <p>Thoughtworks</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/vinodSankaranarayanan.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Vinod Sankaranarayanan</h6>
+                    <p>Head - Digital Public Goods and Infrastructure</p>
+                    <p>Thoughtworks</p>
+                </div>
+            </div>
         </div>
-    </div>
-       <div class="speakers-list-item"><img src="./img/2020/kavitha.jpg" />
-           <div class="speakers-list-description">
-               <h6>Kavitha Thyagarajan</h6>
-               <p>Design lead - Digital Platform</p>
-                <p>Thoughtworks</p>
-
-           </div>
-       </div>
-   </div>-->
 </section>
-
 
 <header id="header" class="feature">
     <div class="fixed">
