[Twinkle/Rikkashini] Update Speakers page

--- a/mar2022.html
+++ b/mar2022.html
@@ -331,19 +331,20 @@
         <div class="header">
             <h2>Speakers</h2>
         </div>
-<!--        <div class="speakers-list-item speakers-list-item-initial">-->
-<!--            <img src="./img/2022/adyotKumarSrivastava.jpg" />-->
-<!--            <div class="speakers-list-description">-->
-<!--                <h6>Adyot Kumar Srivastava.</h6>-->
-<!--                <p>Holder</p>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="speakers-list-item speakers-list-item-initial">
+            <img src="./img/2022/bharatKrishnamurthy.jpg" />
+            <div class="speakers-list-description">
+                <h6>Bharat Krishnamurthy</h6>
+                <p>Vice President</p>
+                <p>Paytm</p>
+            </div>
+        </div>
 
         <div class="speakers-list">
             <div class="speakers-list-item">
                 <img src="./img/2022/adyotKumarSrivastava.jpg" />
                 <div class="speakers-list-description">
-                    <h6>Adyot Kumar Srivastava.</h6>
+                    <h6>Adyot Kumar Srivastava</h6>
                     <p>Business Analyst, CoffeeBeans Consulting</p>
                 </div>
             </div>
@@ -368,14 +369,8 @@
                     <p>Dell Tech</p>
                 </div>
             </div>
-            <div class="speakers-list-item"><img src="./img/2022/bharatKrishnamurthy.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Bharat Krishnamurthy</h6>
-                    <p>Vice President</p>
-                    <p>Paytm</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/dhivyaRaj.jpg" />
+
+            <div class="speakers-list-item"><img style="width:230px ; height:185px" src="./img/2022/dhivyaRaj.jpg"/>
                 <div class="speakers-list-description">
                     <h6>Dhivya Raj</h6>
                     <p>Tech Project Manager, CoffeeBeans Consulting</p>
@@ -431,6 +426,13 @@
             <div class="speakers-list-item"><img src="./img/2022/rohitKalro.jpg" />
                 <div class="speakers-list-description">
                     <h6>Rohit Kalro</h6>
+                    <p>Head, Digital Transformation & Strategy</p>
+                    <p>Thoughtworks</p>
+                </div>
+            </div>
+            <div class="speakers-list-item"><img src="./img/2022/vinodhArumugam.jpg" />
+                <div class="speakers-list-description">
+                    <h6>Vinodh Arumugam</h6>
                     <p>Head, Digital Transformation & Strategy</p>
                     <p>Thoughtworks</p>
                 </div>
