[Twinkle/Rikkashini] Update Speakers page

--- a/mar2022.html
+++ b/mar2022.html
@@ -433,7 +433,7 @@
             <div class="speakers-list-item"><img src="./img/2022/vinodhArumugam.jpg" />
                 <div class="speakers-list-description">
                     <h6>Vinodh Arumugam</h6>
-                    <p>Head, Digital Transformation & Strategy</p>
+                    <p>Domain Specialist, Retail Practices</p>
                     <p>Thoughtworks</p>
                 </div>
             </div>
